# Mobile-robot

./: README.md
3D files/: LIDAR_holder.stl  RPi_holder.stl  Robot_base.stl  front_board_for_name.stl  kamerka.stl
Arduino code/: platformio.ini
Arduino code/include/: README  config.hpp  functions.hpp
Arduino code/src/: config.cpp  functions.cpp  main.cpp  motor_actions.cpp
Arduino_code/: platformio.ini
Arduino_code/include/: config.hpp  functions.hpp  motor_actions.hpp  pin_structs.hpp
Arduino_code/include/common/: functions.hpp  motor_actions.hpp  pin_structs.hpp
Arduino_code/src/: config.cpp  functions.cpp  main.cpp  motor_actions.cpp
Arduino_code/src/common/: functions.cpp  motor_actions.cpp
RPi_motor_interface/: CMakeLists.txt  package.xml
RPi_motor_interface/config/: mapper_params_online_async.yaml  params.yaml
RPi_motor_interface/include/motor_interface/: aht10_node.hpp  aht10_node_new.hpp  initial_pose_publisher.hpp  motor_interface_node.hpp  odometry_node.hpp  pose_publisher_node.hpp
RPi_motor_interface/launch/: lidar_launch.py  motor_interface_node.py  online_async_launch.py  pose_launch.py  robot_launch.py
RPi_motor_interface/obsolete/: aht10_node_all.hpp  aht10_node_new.cpp  inital_pose_publisher.py  initial_pose_publisher.py  navigation_launch.py  slam_launch.py  slam_toolbox_params.yaml
RPi_motor_interface/scripts/: LED.py  led_blink.py  led_turn_off.py  temp_reader.py
RPi_motor_interface/src/: aht10_node.cpp  aht10_node_new.cpp  initial_pose_publisher.cpp  motor_interface_node.cpp  odometry_node.cpp  pose_publisher_node.cpp
RPi_motor_interface/urdf/: robot.urdf.xacro
