<?xml version="1.0"?>
<package format="3">
    <name>motor_interface</name>
    <version>0.0.1</version>
    <description>ROS 2 interface node for Raspberry Pi communication with Arduino via UART.</description>

    <maintainer email="kajetan.walawski@tlen.pl">Your Name</maintainer>
    <license>MIT</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>rclcpp</depend>
    <depend>geometry_msgs</depend>
    <depend>sensor_msgs</depend>

    <exec_depend>teleop_twist_keyboard</exec_depend>
    <exec_depend>boost</exec_depend>

    <build_depend>boost</build_depend>
    <build_export_depend>boost</build_export_depend>

    <depend>robot_state_publisher</depend>
    <build_depend>xacro</build_depend>
    <exec_depend>xacro</exec_depend>


    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
